--- a/styles/layout.css
+++ b/styles/layout.css
@@ -96,6 +96,7 @@ footer nav a:hover {
 
 /*index page start*/
 
+/*company logo in header*/
 header{
     text-align: center;
 }
@@ -108,33 +109,27 @@ aside:hover{
 .index-navbar, .index-footer{
     text-align: center;
     border-radius: 0.3em; 
-    position: relative; /*this creates stacking*/
     margin-top: 0.3rem; /* spacing between elements above (5px)*/
     margin-bottom: 10px; /* spacing between elements below (10px)*/
 }
 
 
-.index-footer {
-    padding: 0.125rem;
-    
-}
-
-.index-navbar{
-    text-align: center;
-    margin-bottom: 1rem;
-    padding: 2em;
+.index-navbar, .index-footer{
+    display: flex; 
+    justify-content: center; /*aligns flex items to the center*/
+    gap: 6vw; /*gap between the buttons*/
+    width: 100%; /*makes everything align with castle image*/
 }
 
 .container{
     width: auto;
     margin: 2% auto; /*centers content*/
-    max-width: 90vw; /*same width as navbar, footer, castle*/
+    max-width: 100vw; /*same width as navbar, footer, castle*/
 }
 
 .index-navbar a, .index-footer a{
   text-decoration: none; /*removes underline*/
-  margin: 0 5vw; /* spacing left/right of each link (adjusts to screen width)*/
-  padding: 0.5em 1em; /*inline spacing in the link box (6px, 12px)*/
+  padding: 0.25em 0.5em; /*inline spacing in the link box (6px, 12px) match with castle image*/
   border-radius: 0.3em; 
   background-color: black; 
 }
@@ -158,7 +153,7 @@ aside:hover{
     font-size: 4.375rem;
     border-radius: 0.3em; 
     position: absolute; /* positions text overlay above everything and fixed in place(.castle_container) */
-    top: 50%; /*centers the text overlay from vertical point*/
+    top: 55%; /*centers the text overlay from vertical point*/
     left: 20%; /*centers the text overlay from the left*/
     right: 20%; /*centers the text overlay from the right*/
     font-size: large;
@@ -169,15 +164,13 @@ aside:hover{
     font-size: xx-large;
 }
 
-/* Center main content */
-main {
-    text-align: center;
-}
 
 /* Footer links layout */
-.index-footer p {
+.index-footer p{
     display: inline-block;
-    width: 33%;
+    background: linear-gradient(to bottom, #0d0d0d, rgb(210, 0, 0));
+    padding: 3px;/* changes the size of footer  */
+    text-align: center;
 }
 
 .index-footer p:first-child {
